--- a/cube.css
+++ b/cube.css
@@ -21,6 +21,8 @@ div.hor {width:320px; padding-left:48px; display:inline-block;}
 div.hors {padding-left:32px; display:inline-block;}
 div.horh {padding-right:24px; display:inline-block;}
 div.horm {width:240px; padding-left:48px; display:inline-block;}
+div.hort {width:140px; display:inline-block;}
+.rp100 {width:80px;}
 .rp180 {width:140px;}
 .roofpig {display:inline-block;}
 
